Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18317

MacroExpander goes into infinite loop when setting %{CurrentRun:Executable:Path} as RC's working directory

XMLWordPrintable

    • f6c276daf03c59326bdf1fec3a44c48307912fae (qt-creator/qt-creator/4.9)

      I have a big project that uses CMake and ninja for the build system. When QtC retrieves information about project, it hangs for a several minutes: UI not responsive. It happens on project opening, after build etc.

      Profiling with callgrind I see, that some work done in the Utils::AbstractMacroExpander::expandNestedMacros.

      I attached the callgrind log.

        1. crash_stack_trace.txt
          7.98 MB
          Nikita Krupenko
        2. hang_stack_trace.txt
          542 kB
          Nikita Krupenko
        3. callgrind.tar.gz
          513 kB
          Nikita Krupenko
        For Gerrit Dashboard: QTCREATORBUG-18317
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            krnekit Nikita Krupenko
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes