Macro expander: Do not use RunConfiguration::runnable()

... to get the current executable. That leads to an infinite loop if the
argument or working directory fields reference the
%{CurrentRun:Executable:Path} variable, as these fields also get
evaluated in RunConfiguration::runnable().

Fixes: QTCREATORBUG-18317
Change-Id: Ic249f8ff78d170110947e370045144817b179341
Reviewed-by: hjk <hjk@qt.io>